<resources>
    <string name="app_name">Nycia</string>
    <string name="Portal_salon_Button">For Salon</string>
    <string name="Portal_user_Button">For User</string>
    <string name="Sign_up">No account yet? Create on</string>
    <string name="Back_to_login_text">Already a member? Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="Salon">Salon</string>
    <string name="spa">Spa</string>
    <string-array name="Categories">
        <item>Salon</item>
        <item>spa</item>
    </string-array>

    <string-array name="States">
        <item>AndhraPradesh</item>
        <item>ArunachalPradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu Kashmir</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>MadhyaPradesh</item>
    <item>Maharashtra</item>
        <item>Manipur </item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>TamilNadu</item>
        <item>Tripura</item>
        <item>UttarPradesh</item>
        <item>WestBengal</item>
        <item>Chhattisgarh</item>
        <item>Uttarakhand</item>
        <item>Jharkhand</item>
        <item>Telangana</item>
    </string-array>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_Account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Change_State">Change State</string>
    <string name="Welcome">Welcome User</string>
    <string name="login_sign_up">Login/Sign up</string>
    <string name="State">State</string>
    <string name="Your_orders">Your Orders</string>
    <string name="Your_offers">your Offers</string>
    <string name="Settings">Settings</string>
    <string name="Support">Support</string>
    <string name="title_activity_owner__main">Owner_MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="owner_name">Salon Name</string>
    <string name="owner_des">Owner Des</string>
    <string name="settings">Settings</string>
    <string name="add_logo">Add Logo</string>
    <string name="maximum_bookings">Enter the maximum no. of bookings u want in a day</string>

</resources>
