<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.designcut.nycia.user.AccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/aluminum"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:src="@drawable/ic_account_circle_black_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="@string/Welcome"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="monospace"
                    android:text="@string/login_sign_up"
                    android:textSize="10dp"
                    android:visibility="visible"/>
            </LinearLayout>
        </LinearLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#444"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:fontFamily="monospace"
                android:padding="12dp"
                android:text="@string/Change_State"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:fontFamily="serif-monospace"
                android:padding="6dp"
                android:text="@string/State"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="16dp" />

        </LinearLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#444"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Your_orders"
            android:layout_margin="6dp"
            android:padding="12dp"
            android:textSize="16dp"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#444"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Your_offers"
            android:textSize="16dp"
            android:layout_margin="6dp"
            android:padding="12dp"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="#444"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Settings"
            android:textSize="16dp"
            android:layout_margin="6dp"
            android:padding="12dp"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#444"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Support"
            android:textSize="16dp"
            android:layout_margin="6dp"
            android:padding="12dp"/>







    </LinearLayout>

</FrameLayout>
